# github-pr-kb

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLI_GUIDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: ruff_lint.py
.claude/rules/: clean-code.md  python-typing.md  ruff-after-python.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  github-pr-kb.yml
.opencode/plans/: plan.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-project-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-github-extraction-core/: 02-01-PLAN.md  02-01-RISK-REVIEW.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-RISK-REVIEW.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-extraction-resilience-cache/: 03-01-PLAN.md  03-01-RISK_REVIEW.md  03-01-SUMMARY.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/github_pr_kb/: action_state.py  classifier.py  cli.py  config.py  extractor.py  generator.py  models.py
tests/: conftest.py  test_action_state.py  test_action_workflow.py  test_classifier.py  test_classifier_integration.py  test_cli.py  test_config.py  test_e2e_pipeline.py  test_extractor.py  test_extractor_integration.py  test_generator.py  test_models.py  test_phase7_uat_envs.py  test_readme.py
tests/support/: __init__.py  phase7_uat_envs.py
(+79 files in other folders)
